--- a/requirements.txt
+++ b/requirements.txt
@@ -51,7 +51,8 @@ filelock==3.16.1
 flatbuffers==24.3.25
 fonttools==4.25.0
 frozenlist==1.5.0
-fsspec==2024.10.0
+fsspec>=2023.0
+
 gitdb==4.0.11
 GitPython==3.1.43
 google-auth==2.37.0
@@ -126,7 +127,7 @@ ply==3.11
 posthog==3.7.4
 
 propcache==0.2.1
-protobuf==5.29.1
+protobuf>=3.20,<5
 
 pyarrow==11.0.0
 pyasn1==0.6.1
@@ -135,7 +136,7 @@ pyasn1_modules==0.4.1
 pycurl==7.45.2
 pydantic==2.10.3
 pydantic-settings==2.6.1
-pydantic_core==2.27.1
+pydantic-core==2.6.0
 pydeck==0.9.1
 PyDispatcher==2.0.5
 
@@ -194,7 +195,8 @@ typing-inspect==0.9.0
 typing_extensions==4.12.2
 
 urllib3==2.2.3
-uvicorn==0.32.1
+uvicorn==0.27.0
+
 
 watchfiles==1.0.3
 webencodings==0.5.1
