--- a/requirements.txt
+++ b/requirements.txt
@@ -28,36 +28,38 @@ certifi==2024.8.30
 
 charset-normalizer==3.4.0
 chroma-hnswlib==0.7.6
-
+chromadb==0.5.23
 click==8.1.7
-clyent==1.2.1
+clyent==1.2.2
 colorama==0.4.6
 coloredlogs==15.0.1
-
+conda-repo-cli==1.0.75
+conda-verify==3.4.2
+constantly==15.1.0
 
 cssselect==1.1.0
+
+daal4py==2023.1.1
 dataclasses-json==0.6.7
 
-datashape==0.5.2
+datashape==0.5.4
 
 Deprecated==1.2.15
 
 distro==1.9.0
 durationpy==0.9
 et-xmlfile==1.1.0
-
+fastapi==0.115.6
 filelock==3.16.1
 
 flatbuffers==24.3.25
 fonttools==4.25.0
 frozenlist==1.5.0
-fsspec>=2023.0
-
-
+fsspec==2024.10.0
 gitdb==4.0.11
 GitPython==3.1.43
 google-auth==2.37.0
-
+googleapis-common-protos==1.66.0
 greenlet==3.1.1
 grpcio==1.68.1
 h11==0.14.0
@@ -81,9 +83,9 @@ jsonpatch==1.33
 jsonpointer==3.0.0
 
 kubernetes==31.0.0
-
-
-
+langchain==0.3.11
+langchain-community==0.3.11
+langchain-core==0.3.24
 langchain-openai==0.2.12
 langchain-text-splitters==0.3.2
 langsmith==0.2.2
@@ -93,7 +95,7 @@ marshmallow==3.23.1
 
 mdurl==0.1.2
 
-mkl-service==2.4.1
+mkl-service==2.4.0
 mmh3==5.0.1
 monotonic==1.6
 mpmath==1.3.0
@@ -103,16 +105,16 @@ munkres==1.1.4
 
 numpy==1.26.4
 oauthlib==3.2.2
-
+onnxruntime==1.20.1
 openai==1.57.2
 openpyxl==3.0.10
 opentelemetry-api==1.29.0
-
+opentelemetry-exporter-otlp-proto-common==1.29.0
 opentelemetry-exporter-otlp-proto-grpc==1.29.0
 opentelemetry-instrumentation==0.50b0
 opentelemetry-instrumentation-asgi==0.50b0
 opentelemetry-instrumentation-fastapi==0.50b0
-
+opentelemetry-proto==1.29.0
 opentelemetry-sdk==1.29.0
 opentelemetry-semantic-conventions==0.50b0
 opentelemetry-util-http==0.50b0
@@ -128,20 +130,16 @@ ply==3.11
 posthog==3.7.4
 
 propcache==0.2.1
-
-
-
-
+protobuf==5.29.1
 
 pyarrow==11.0.0
 pyasn1==0.6.1
 pyasn1_modules==0.4.1
 
 pycurl==7.45.2
-
+pydantic==2.10.3
 pydantic-settings==2.6.1
-
-
+pydantic_core==2.27.1
 pydeck==0.9.1
 PyDispatcher==2.0.5
 
@@ -162,7 +160,7 @@ python-dotenv==1.0.1
 
 python-lsp-jsonrpc==1.0.0
 
-
+pywin32==305.1
 pywin32-ctypes==0.2.3
 PyYAML==6.0.2
 
@@ -174,6 +172,7 @@ requests-toolbelt==1.0.0
 rich==13.9.4
 rsa==4.9
 
+scikit-learn-intelex==20230426.121932
 scipy==1.11.1
 
 shellingham==1.5.4
@@ -183,10 +182,10 @@ sniffio==1.3.1
 
 SQLAlchemy==2.0.36
 starlette==0.41.3
-
+streamlit==1.34.0
 sympy==1.13.3
 
-TBB==2022.0.0
+TBB==0.2
 tenacity==9.0.0
 
 tiktoken==0.8.0
@@ -200,9 +199,7 @@ typing-inspect==0.9.0
 typing_extensions==4.12.2
 
 urllib3==2.2.3
-uvicorn>=0.32.0
-
-
+uvicorn==0.32.1
 
 watchfiles==1.0.3
 webencodings==0.5.1
