--- a/requirements.txt
+++ b/requirements.txt
@@ -1,214 +1,31 @@
-
-aiohappyeyeballs==2.4.4
 aiohttp==3.11.10
-aiosignal==1.3.1
 altair==5.3.0
-altgraph==0.17.4
-
-annotated-types==0.7.0
 anyio==4.7.0
-appdirs==1.4.4
-
-asgiref==3.8.1
-
-atomicwrites==1.4.0
 attrs==24.2.0
-
-backoff==2.2.1
-
-backports.weakref==1.0.post1
 bcrypt==4.2.1
-
-blinker==1.8.2
-
-brotlipy==0.7.0
-build==1.2.2.post1
 cachetools==5.5.0
 certifi==2024.8.30
-
 charset-normalizer==3.4.0
-chroma-hnswlib==0.7.6
-chromadb==0.5.23
-click==8.1.7
-clyent==1.2.1
-colorama==0.4.6
-coloredlogs==15.0.1
-
-constantly==15.1.0
-
-cssselect==1.1.0
-
-daal4py==2023.1.1
-dataclasses-json==0.6.7
-
-datashape==0.5.2
-
-Deprecated==1.2.15
-
-distro==1.9.0
-durationpy==0.9
-et-xmlfile==1.1.0
 fastapi==0.115.6
 filelock==3.16.1
-
-flatbuffers==24.3.25
-fonttools==4.25.0
-frozenlist==1.5.0
-fsspec==2024.10.0
-gitdb==4.0.11
-GitPython==3.1.43
 google-auth==2.37.0
-googleapis-common-protos==1.66.0
-greenlet==3.1.1
-grpcio==1.68.1
 h11==0.14.0
-
-httpcore==1.0.7
-httptools==0.6.4
 httpx==0.28.1
-httpx-sse==0.4.0
-huggingface-hub==0.26.5
 humanfriendly==10.0
-
 idna==3.10
-
-importlib_metadata==8.5.0
-importlib_resources==6.4.5
-inflection==0.5.1
-
-jiter==0.8.2
-
-jsonpatch==1.33
-jsonpointer==3.0.0
-
-kubernetes==31.0.0
 langchain==0.3.11
-langchain-community==0.3.11
 langchain-core==0.3.24
-langchain-openai==0.2.12
-langchain-text-splitters==0.3.2
-langsmith==0.2.2
-
-markdown-it-py==3.0.0
-marshmallow==3.23.1
-
-mdurl==0.1.2
-
-mkl-service==2.4.2
-mmh3==5.0.1
-monotonic==1.6
-mpmath==1.3.0
-multidict==6.1.0
-
-munkres==1.1.4
-
 numpy==1.26.4
-oauthlib==3.2.2
-onnxruntime==1.20.1
 openai==1.57.2
-openpyxl==3.0.10
-opentelemetry-api==1.29.0
-opentelemetry-exporter-otlp-proto-common==1.29.0
-opentelemetry-exporter-otlp-proto-grpc==1.29.0
-opentelemetry-instrumentation==0.50b0
-opentelemetry-instrumentation-asgi==0.50b0
-opentelemetry-instrumentation-fastapi==0.50b0
-opentelemetry-proto==1.29.0
-opentelemetry-sdk==1.29.0
-opentelemetry-semantic-conventions==0.50b0
-opentelemetry-util-http==0.50b0
 orjson==3.10.12
-overrides==7.7.0
 packaging==24.2
-
-patsy==0.5.3
-pefile==2023.2.7
-pep8==1.7.1
-
-ply==3.11
-posthog==3.7.4
-
-propcache==0.2.1
-protobuf==5.29.1
-
-pyarrow==11.0.0
-pyasn1==0.6.1
-pyasn1_modules==0.4.1
-
-pycurl==7.45.2
 pydantic==2.10.3
-pydantic-settings==2.6.1
-pydantic_core==2.27.1
-pydeck==0.9.1
-PyDispatcher==2.0.5
-
-Pygments==2.18.0
-pyinstaller==6.11.1
-pyinstaller-hooks-contrib==2024.11
-
-pyls-spyder==0.4.0
-
-PyPika==0.48.9
-pyproject_hooks==1.2.0
-PyQt5==5.15.7
-PyQtWebEngine==5.15.4
-pyreadline3==3.5.4
-
-python-dateutil==2.9.0.post0
 python-dotenv==1.0.1
-
-python-lsp-jsonrpc==1.0.0
-
-
-pywin32-ctypes==0.2.3
-PyYAML==6.0.2
-
-queuelib==1.5.0
 requests==2.32.3
-requests-oauthlib==2.0.0
-requests-toolbelt==1.0.0
-
-rich==13.9.4
-rsa==4.9
-
-scikit-learn-intelex==2025.0.1
-scipy==1.11.1
-
-shellingham==1.5.4
-six==1.17.0
-smmap==5.0.1
-sniffio==1.3.1
-
 SQLAlchemy==2.0.36
 starlette==0.41.3
-streamlit==1.34.0
-sympy==1.13.3
-
-TBB==2022.0.0
 tenacity==9.0.0
-
-tiktoken==0.8.0
-
-tokenizers==0.20.3
-
 tqdm==4.67.1
-
-typer==0.15.1
-typing-inspect==0.9.0
-typing_extensions==4.12.2
-
-urllib3==2.2.3
 uvicorn==0.32.1
-
-watchfiles==1.0.3
-webencodings==0.5.1
-websocket-client==1.8.0
-websockets==14.1
-
-wrapt==1.17.0
-
-yarl==1.18.3
-
 zipp==3.21.0
-zstandard==0.19.0
-gunicorn 
+gunicorn==20.1.0
